deploy/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-report-execution/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-data
    sas.com/admin: namespace
  name: sas-report-data
spec:
  host: $(INGRESS_HOST)
  path: /reportData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-data
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportData
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-data
    sas.com/admin: namespace
  name: sas-report-data-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /reportData
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-data
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportPackages
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-packages
    sas.com/admin: namespace
  name: sas-report-packages
spec:
  host: $(INGRESS_HOST)
  path: /reportPackages
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-packages
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-reportPackages
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-report-packages
    sas.com/admin: namespace
  name: sas-report-packages-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /reportPackages
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-report-packages
  wildcardPolicy: Subdomain
